<resources>
    <string name="app_name">Aula03</string>

    <!--User Form-->
    <string name="form_user_title">Formulário de Usuário</string>
    <string name="form_user_full_name">Nome completo</string>
    <string name="form_user_email">Email</string>
    <string name="form_user_username">Usuário</string>
    <string name="form_user_password">Senha</string>
    <string name="form_user_birthdate">Data de Nascimento</string>
    <string name="form_user_gender">Sexo</string>
    <string name="form_user_btn_save">Salvar Usuário</string>


    <!--Genders-->
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="not_inform">Não informar</string>
    <string name="anything">Vale tudo rsrs</string>

    <!--User List Item-->
    <string name="list_item_user_name">Nome do usuário</string>
    <string name="list_item_user_email">email@exemplo.com</string>
    <string name="list_user_activity_title">Lista de Usuários</string>

</resources>
