<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <com.capacitacao.embedded.aula03.CustomTextView
            android:id="@+id/label_full_name"
            style="@style/AppTheme.InfoUserLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_user_full_name" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_full_name"
            android:text="@string/form_user_full_name" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/label_gender"
            style="@style/AppTheme.InfoUserLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_user_gender" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_gender"
            android:text="@string/form_user_gender" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/label_birthdate"
            style="@style/AppTheme.InfoUserLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_user_birthdate" />

        <TextView
            android:id="@+id/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_birthdate"
            android:text="@string/form_user_birthdate" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/label_email"
            style="@style/AppTheme.InfoUserLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_user_email" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_email"
            android:text="@string/form_user_username" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/label_password"
            style="@style/AppTheme.InfoUserLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_user_password" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_password"
            android:text="@string/form_user_username" />
    </RelativeLayout>

</LinearLayout>